# industriverse

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_SHIELD_COMPLETE_DELIVERY_SUMMARY.md  AI_SHIELD_EMERGENT_BEHAVIOR_MAP.md  AI_SHIELD_GOVERNANCE_BLUEPRINT.md  AI_SHIELD_HYBRID_SUPERSTRUCTURE_MATHEMATICAL_SPECIFICATION.md  AI_SHIELD_HYBRID_SUPERSTRUCTURE_WHITEPAPER.md  AI_SHIELD_PHASE5_IMPLEMENTATION_ROADMAP.md  AI_SHIELD_V2_PHASE1_COMPLETION_REPORT.md  AI_SHIELD_V2_PHASE2_COMPLETION_REPORT.md  AI_SHIELD_V2_PHASE_ARCHITECTURE.md  AUTONOMOUS_DISCOVERY_LOOP_ASSESSMENT.md  CODE_OF_CONDUCT.md  COLLABORATION_WORKFLOW.md  COMPLETE_THERMODYNASTY_INTEGRATION.md  COMPREHENSIVE_ENHANCEMENT_ANALYSIS.md  COMPREHENSIVE_INTEGRATION_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_COMMANDS.md  DISCOVERY_LOOP_INTEGRATION.md  DISCOVERY_LOOP_TOP_TO_BOTTOM_INTEGRATION.md  Dockerfile  ENHANCEMENT_INTEGRATION_PLAN.md  ERROR_HANDLING_IMPROVEMENTS.md  FINAL_FORM_ARCHITECTURE.md  INDUSTRIVERSE_DIFFUSION_FRAMEWORK.md  INDUSTRIVERSE_MACBOOK_ASSESSMENT.md  INTEGRATED_EXECUTION_PLAN.md  INTEGRATE_PHASE_0_3.sh  INTEGRATION_MAPPING.md  INTEGRATION_MASTER_PLAN.md  INTEGRATION_ROADMAP.md  INTEGRATION_WALKTHROUGH.md  LICENSE  LICENSE.txt  NORTH_STAR_VISION.md  PHASE3_COMPLETION_REPORT.md  PHASE5_EXECUTIVE_SUMMARY.md  (+48 more)
integrations/dome/: Dockerfile  ai_engines_list.txt  check_service_endpoints.py  cloud_obmi_integration_report.txt  cluster_assessment.sh  connect_to_existing_dome.py  create_complete_final_package.py  create_final_ip_package.py  create_final_production_package.py  obmi_mock.py  (+18 more)
(+5342 files in other folders)
