[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dome-industriverse"
version = "1.0.0"
description = "Ambient Intelligence Operating System - WiFi Sensing Platform"
authors = [{name = "Industriverse", email = "contact@industriverse.com"}]
license = {text = "Proprietary"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "protobuf>=3.19.0",
    "grpcio>=1.44.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "cryptography>=3.4.0",
    "websockets>=10.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
dome = "dome_industriverse.cli:main"
dome-server = "dome_industriverse.server:main"
dome-deploy = "dome_industriverse.deploy:main"
